tree-sitter-rock/grammar.js
    program: $ => repeat(choice($._newline, $._top_level_item)),

    _top_level_item: $ => choice(
      $.language_item_marker,
      $.import_declaration,
      $.export_declaration,
      $.function_declaration,
      $.function_signature,
      $.struct_declaration,
      $.enum_declaration,
      $.trait_declaration,
      $.impl_declaration,
      $.macro_declaration,
      $.infix_declaration,
      $.type_alias,
      $.module_declaration,
      $.extern_signature,
    ),

    identifier: _ => /[a-z_][a-zA-Z0-9_]*/,
    type_identifier: _ => /[A-Z][a-zA-Z0-9_]*/,
    number: _ => /[0-9]+/,
    operator: _ => token(prec(-1, /[+\-*\/%=!<>$|&;^~]+/)),
    language_item_marker: $ => seq(
      'lang',
      field('role', $.identifier),
    ),

    type_alias: $ => seq(
      'type',
      field('name', $.type_identifier),
      optional($.generic_parameters),
      '=',
      field('value', $.type),
    ),

    function_declaration: $ => seq(
      optional('unsafe'),
      optional(field('receiver', $.receiver)),
      field('name', $._function_name),
      '=',
      optional(field('parameters', $.parameter_list)),
      field('arrow', $.function_arrow),
      field('body', choice($.simple_binary_expression, $.block)),
    ),

    function_signature: $ => seq(
      optional('unsafe'),
      optional(field('receiver', $.receiver)),
      field('name', $._function_name),
      ':',
      field('type', $.type),
      optional($.where_clause),
    ),

    _function_name: $ => choice(
      $.identifier,
      $.operator,
      alias($.symbolic_operator_name, $.operator),
    ),
    function_arrow: _ => choice('->', '!->', '~>'),

    parameter_list: $ => seq(
      $.pattern,
      repeat(seq(',', $.pattern)),
      optional(','),
    ),

    struct_declaration: $ => seq(
      'struct',
      field('name', $.type_identifier),
      optional($.generic_parameters),
      optional(field('body', $.declaration_block)),
    ),

    struct_field: $ => seq(
      optional(field('export', '<')),
      field('name', $.identifier),
      ':',
      field('type', $.type),
      optional(seq('=', field('default', $.expression))),
    ),

    enum_declaration: $ => seq(
      'enum',
      field('name', $.type_identifier),
      optional($.generic_parameters),
      optional(field('body', $.enum_block)),
    ),

    enum_variant: $ => seq(
      optional(seq($.language_item_marker, repeat1($._newline))),
      field('name', $.type_identifier),
      optional(choice(
        field('fields', $.type_arguments),
        field('fields', $.variant_field_block),
      )),
    ),

    trait_declaration: $ => seq(
      'trait',
      field('name', $.type_identifier),
      optional($.generic_parameters),
      optional(seq('for', field('target', $.generic_parameter))),
      optional($.where_clause),
      optional(field('body', $.trait_block)),
    ),

    impl_declaration: $ => seq(
      'impl',
      optional(field('trait', $.type)),
      optional(seq('for', field('target', $.type))),
      optional($.where_clause),
      optional(field('body', $.impl_block)),
    ),

    declaration_block: $ => seq(
      $._indent,
      repeat($._newline),
      $.struct_field,
      repeat(seq(repeat1($._newline), $.struct_field)),
      repeat($._newline),
      $._dedent,
    ),

    generic_parameters: $ => seq(
      $.generic_parameter,
      repeat(seq(',', $.generic_parameter)),
    ),

    generic_parameter: $ => choice(
      field('name', $.type_identifier),
      $.constructor_generic_parameter,
      $.kinded_generic_parameter,
    ),

    constructor_generic_parameter: $ => seq(
      optional('('),
      field('name', $.type_identifier),
      $.type_hole,
      repeat(seq(',', $.type_hole)),
      optional(')'),
    ),

    where_clause: $ => seq(
      'where',
      $.where_predicate,
      repeat(seq(',', $.where_predicate)),
    ),

    where_predicate: $ => seq(
      field('subject', $.generic_parameter),
      optional(seq(':', field('bound', $.type))),
    ),

    _type_atom: $ => choice(
      $.type_identifier,
      $.type_path,
      $.type_hole,
      $.unit_type,
      $.tuple_type,
      $.array_type,
      $.reference_type,
      $.pointer_type,
      $.associated_type,
      $.type_lambda,
      $.parenthesized_type,
    ),

    type_hole: _ => '_',
    parenthesized_type: $ => seq('(', $.type, ')'),

    array_type: $ => seq(
      '[',
      field('element', $.type),
      optional(seq(';', field('length', $.number))),
      ']',
    ),

    type_application: $ => prec.left(5, seq(
      $._type_atom,
      field('arguments', $.type_arguments),
    )),

    type_arguments: $ => seq(
      choice($._type_atom, $.nested_type_argument),
      repeat(seq(',', choice($._type_atom, $.nested_type_argument))),
    ),

    function_type: $ => prec.right(1, seq($.type_application_or_atom, '->', $.type)),
    type_application_or_atom: $ => choice($.type_application, $._type_atom),

    type_lambda: $ => prec.right(seq(
      '\\',
      $.generic_parameter,
      repeat(seq(',', $.generic_parameter)),
      '->',
      $.type,
    )),

    block: $ => choice(
      field('body', $._statement),
      seq(
        $._indent,
        repeat($._newline),
        field('body', $._statement),
        repeat(seq(repeat($._newline), field('body', $._statement))),
        repeat($._newline),
        $._dedent,
      ),
    ),

    _statement: $ => choice(
      $.return_expression,
      $.break_expression,
      $.continue_expression,
      $.assignment,
      $.multiline_argument_block,
      $.expression,
    ),

    assignment: $ => prec.right(seq(
      field('left', $.assignment_target),
      optional(seq(':', field('type', $.type))),
      '=',
      field('right', $.expression),
    )),

    assignment_target: $ => choice(
      $.identifier,
      $.mutable_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.postfix_expression,
    ),

    expression: $ => choice(
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.while_expression,
      $.loop_expression,
      $.unsafe_expression,
      $.macro_invocation,
      $.range_expression,
      $.binary_expression,
      $._call_expression,
    ),

    lambda_expression: $ => prec.dynamic(20, seq(
      optional($.parameter_list),
      field('arrow', $.function_arrow),
      field('body', $.block),
    )),

    binary_expression: $ => prec.dynamic(20, prec.left(1, seq(
      field('left', $._call_expression),
      field('operator', $.operator),
      field('right', choice($._call_expression, $.indented_binary_operand)),
      repeat(seq(
        field('operator', $.operator),
        field('right', choice($._call_expression, $.indented_binary_operand)),
      )),
    ))),

    range_expression: $ => prec.right(0, seq(
      optional(field('start', choice($.binary_expression, $._call_expression))),
      field('operator', choice('..', '..=')),
      optional(field('end', choice($.binary_expression, $._call_expression))),
    )),

    _call_expression: $ => choice(
      $.call_expression,
      $._postfix_expression,
    ),

    call_expression: $ => prec.dynamic(10, prec.left(5, choice(
      seq(
        field('function', $._postfix_expression),
        field('argument', $._call_argument),
        repeat(seq(',', field('argument', $._call_argument))),
      ),
      seq(
        field('function', $._postfix_expression),
        field('arguments', $.multiline_argument_block),
      ),
    ))),

    _call_argument: $ => choice(
      $.call_hole,
      $.operator,
      $._postfix_expression,
      $.lambda_expression,
    ),
    call_hole: _ => '_',

    _postfix_expression: $ => choice(
      $.postfix_expression,
      $.qualified_call_expression,
      $.unary_expression,
      $.cast_expression,
      $._atom,
    ),

    postfix_expression: $ => prec.left(8, seq(
      field('value', choice($.unary_expression, $.cast_expression, $._atom)),
      repeat1(field('operation', choice(
        $.index_suffix,
        $.field_suffix,
        $.propagate_suffix,
        $.bang_call_suffix,
      ))),
    )),

    field_suffix: $ => seq('.', field('field', choice($.identifier, $.number))),
    bang_call_suffix: _ => '!',

    unary_expression: $ => prec.right(9, seq(
      field('operator', choice('&', seq('&', choice('mut', '^')), $.operator)),
      field('operand', $._postfix_expression),
    )),

    _atom: $ => choice(
      $.identifier,
      $.type_identifier,
      $.path_expression,
      $.self_expression,
      $.postfix_continuation,
      $.native_operator,
      $.number,
      $.float,
      $.string,
      $.char,
      $.boolean,
      $.unit_expression,
      $.tuple_expression,
      $.array_expression,
      $.field_section_expression,
      $.multiplication_section_expression,
      $.typed_parenthesized_expression,
      $.parenthesized_expression,
      $.constructor_expression,
      $.type_qualified_constructor_expression,
      $.qualified_expression,
    ),

    parenthesized_expression: $ => seq(
      '(',
      choice($.dereference_expression, $.expression),
      ')',
    ),

    array_expression: $ => choice(
      seq(
        '[',
        optional(choice(
          seq($.expression, ';', $.number),
          seq($.expression, repeat(seq(',', $.expression)), optional(',')),
        )),
        ']',
      ),
      seq(
        '[',
        $._indent,
        repeat($._newline),
        $.expression,
        optional(','),
        repeat(seq(repeat($._newline), $.expression, optional(','))),
        repeat($._newline),
        $._dedent,
        ']',
      ),
    ),

    type_qualified_constructor_expression: _ => token(prec(
      100,
      /\([A-Z][a-zA-Z0-9_]*[ \t]+_(,[ \t]*[A-Z][a-zA-Z0-9_]*)?\)(::[A-Za-z][a-zA-Z0-9_]*)+/,
    )),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', choice(
        $.negated_native_condition,
        $.assignment_condition,
        $.simple_binary_expression,
        $.expression,
      )),
      optional(choice('then', seq(repeat1($._newline), 'then'))),
      field('consequence', $.block),
      optional(choice(
        seq('else', field('alternative', choice($.if_expression, $.block))),
        seq(
          repeat1($._newline),
          'else',
          field('alternative', choice($.if_expression, $.block)),
        ),
      )),
      repeat($._newline),
    )),

    unsafe_expression: $ => seq('unsafe', field('body', $.block)),
    identifier_pattern: $ => $.identifier,
