tree-sitter-rock/test/corpus/higher_kinded_types.txt
==================
constructor trait target
==================

trait Functor for F _

---

(program
  (trait_declaration
    name: (type_identifier)
    target: (generic_parameter
      (constructor_generic_parameter
        name: (type_identifier)
        (type_hole)))))

==================
binary constructor trait target
==================

trait Bifunctor for F _, _

---

(program
  (trait_declaration
    name: (type_identifier)
    target: (generic_parameter
      (constructor_generic_parameter
        name: (type_identifier)
        (type_hole)
        (type_hole)))))

==================
trait generic and constructor target
==================

trait Natural G _ for F _

---

(program
  (trait_declaration
    name: (type_identifier)
    (generic_parameters
      (generic_parameter
        (constructor_generic_parameter
          name: (type_identifier)
          (type_hole))))
    target: (generic_parameter
      (constructor_generic_parameter
        name: (type_identifier)
        (type_hole)))))

==================
adjacent constructor binders
==================

struct Compose (F _), (G _), A

---

(program
  (struct_declaration
    name: (type_identifier)
    (generic_parameters
      (generic_parameter
        (constructor_generic_parameter
          name: (type_identifier)
          (type_hole)))
      (generic_parameter
        (constructor_generic_parameter
          name: (type_identifier)
          (type_hole)))
      (generic_parameter
        name: (type_identifier)))))

==================
type lambda alias
==================

type ResultWith E = \T -> Result T, E

---

(program
  (type_alias
    name: (type_identifier)
    (generic_parameters
      (generic_parameter
        name: (type_identifier)))
    value: (type_lambda
      (generic_parameter
        name: (type_identifier))
      (type_application
        (type_identifier)
        arguments: (type_arguments
          (type_identifier)
          (type_identifier))))))

==================
impl constructor section
==================

impl Functor for Result _, E

---

(program
  (impl_declaration
    (type_identifier)
    (type_application
      (type_identifier)
      (type_arguments
        (type_hole)
        (type_identifier)))))

==================
multiple-hole type application
==================

type Section = F _, _

---

(program
  (type_alias
    (type_identifier)
    (type_application
      (type_identifier)
      (type_arguments
        (type_hole)
        (type_hole)))))

==================
trait constructor signature
==================

trait Functor for F _
fmap: M -> F A -> F B where M: FnMut A, B

---

(program
  (trait_declaration
    name: (type_identifier)
    target: (generic_parameter
      (constructor_generic_parameter
        name: (type_identifier)
        (type_hole))))
  (function_signature
    name: (identifier)
    type: (function_type
      (type_application_or_atom
        (type_identifier))
      (function_type
        (type_application_or_atom
          (type_application
            (type_identifier)
            arguments: (type_arguments
              (type_identifier))))
        (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier)))))
    (where_clause
      (where_predicate
        subject: (generic_parameter
          name: (type_identifier))
        bound: (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier)
            (type_identifier)))))))

==================
bounded ordinary where-clause signature
==================

fmap: M -> F A -> F B where M: FnMut A, B

---

(program
  (function_signature
    name: (identifier)
    type: (function_type
      (type_application_or_atom
        (type_identifier))
      (function_type
        (type_application_or_atom
          (type_application
            (type_identifier)
            arguments: (type_arguments
              (type_identifier))))
        (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier)))))
    (where_clause
      (where_predicate
        subject: (generic_parameter
          name: (type_identifier))
        bound: (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier)
            (type_identifier)))))))

==================
bounded constructor where-clause signature
==================

apply_f: F A -> A where F _: Functor

---

(program
  (function_signature
    name: (identifier)
    type: (function_type
      (type_application_or_atom
        (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier))))
      (type_identifier))
    (where_clause
      (where_predicate
        subject: (generic_parameter
          (constructor_generic_parameter
            name: (type_identifier)
            (type_hole)))
        bound: (type_identifier)))))

==================
unbounded constructor where-clause signature
==================

constructor_identity: F A -> F A where F _

---

(program
  (function_signature
    name: (identifier)
    type: (function_type
      (type_application_or_atom
        (type_application
          (type_identifier)
          arguments: (type_arguments
            (type_identifier))))
      (type_application
        (type_identifier)
        arguments: (type_arguments
          (type_identifier))))
    (where_clause
      (where_predicate
        subject: (generic_parameter
          (constructor_generic_parameter
            name: (type_identifier)
            (type_hole)))))))

==================
implicit ordinary generic signature
==================

identity: T -> T

---

(program
  (function_signature
    (identifier)
    (function_type
      (type_application_or_atom
        (type_identifier))
      (type_identifier))))

==================
type-qualified constructor call
==================

main = -> (Result _)::Applicative::pure 42

---

(program
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (call_expression
        (type_qualified_constructor_expression)
        (number)))))

==================
nested type lambdas and application precedence
==================

type Nested = (\T -> \U -> Pair T, U) A

---

(program
  (type_alias
    (type_identifier)
    (type_application
      (parenthesized_type
        (type_lambda
          (generic_parameter
            (type_identifier))
          (type_lambda
            (generic_parameter
              (type_identifier))
            (type_application
              (type_identifier)
              (type_arguments
                (type_identifier)
                (type_identifier))))))
      (type_arguments
        (type_identifier)))))

==================
malformed constructor section
==================

type Broken = F _)

---

(program
  (type_alias
    name: (type_identifier)
    value: (type_application
      (type_identifier)
      arguments: (type_arguments
        (type_hole))))
  (ERROR))
