tree-sitter-rock/test/corpus/language_items.txt
==================
language item protocol markers
==================

lang sized
trait Sized

lang drop
trait Drop
    lang method
    drop : I64

lang index
trait Index
    lang output
    type Output
    lang method
    index : I64

lang index_mut
trait IndexMut
    lang output
    type Output
    lang method
    index_mut : I64

lang try
trait Try
    lang output
    type Output
    lang residual
    type Residual
    lang branch
    branch : I64

lang from_residual
trait FromResidual
    lang method
    from_residual : I64

lang control_flow
enum ControlFlow
    lang break
    Break
    lang continue
    Continue

lang sized
< trait ExportedSized

lang control_flow
< enum ExportedControlFlow

---

(program
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (trait_member
      (language_item_marker
        role: (identifier))
      (identifier)
      (type_identifier)))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (trait_member
      (language_item_marker
        role: (identifier))
      (type_identifier))
    (trait_member
      (language_item_marker
        role: (identifier))
      (identifier)
      (type_identifier)))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (trait_member
      (language_item_marker
        role: (identifier))
      (type_identifier))
    (trait_member
      (language_item_marker
        role: (identifier))
      (identifier)
      (type_identifier)))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (trait_member
      (language_item_marker
        role: (identifier))
      (type_identifier))
    (trait_member
      (language_item_marker
        role: (identifier))
      (type_identifier))
    (trait_member
      (language_item_marker
        role: (identifier))
      (identifier)
      (type_identifier)))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (trait_member
      (language_item_marker
        role: (identifier))
      (identifier)
      (type_identifier)))
  (enum_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)
    (enum_variant
      (language_item_marker
        role: (identifier))
      (type_identifier))
    (enum_variant
      (language_item_marker
        role: (identifier))
      (type_identifier)))
  (trait_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier))
  (enum_declaration
    (language_item_marker
      role: (identifier))
    (type_identifier)))
