tree-sitter-rock/test/corpus/layout.txt
==================
nested blocks
==================

main = ->
    first = 1
    if first
        second = 2
        second
    first

---

(program
  (function_declaration
    name: (identifier)
    arrow: (function_arrow)
    body: (block
      body: (assignment
        left: (assignment_target
          (identifier))
        right: (number))
      body: (if_expression
        condition: (identifier)
        consequence: (block
          body: (assignment
            left: (assignment_target
              (identifier))
            right: (number))
          body: (identifier)))
      body: (identifier))))

==================
two-space indentation
==================

struct Pair A, B
  left: A

  // blank/comment lines do not dedent
  right: B

---

(program
  (struct_declaration
    name: (type_identifier)
    (generic_parameters
      (generic_parameter
        name: (type_identifier))
      (generic_parameter
        name: (type_identifier)))
    body: (declaration_block
      (struct_field
        name: (identifier)
        type: (type_identifier))
      (struct_field
        name: (identifier)
        type: (type_identifier)))))

==================
inline body
==================

main = -> 0

---

(program
  (function_declaration
    name: (identifier)
    arrow: (function_arrow)
    body: (block
      body: (number))))

==================
final dedent at eof
==================

main = ->
    0

---

(program
  (function_declaration
    name: (identifier)
    arrow: (function_arrow)
    body: (block
      body: (number))))
