tree-sitter-rock/test/corpus/operator_spacing.txt
==================
spaced operators are binary expressions
==================

calculate = value ->
    value + 1
    value * 2
    value & 3
    value <+> 4

---

(program
  (function_declaration
    (identifier)
    (parameter_list (identifier_pattern (identifier)))
    (function_arrow)
    (block
      (binary_expression (identifier) (operator) (number))
      (binary_expression (identifier) (operator) (number))
      (binary_expression (identifier) (operator) (number))
      (binary_expression (identifier) (operator) (number)))))

==================
attached prefix operators remain call arguments
==================

main = ->
    consume -value
    consume &value
    consume &mut value
    consume &my_value
    0

---

(program
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (call_expression (identifier) (unary_expression (operator) (identifier)))
      (call_expression (identifier) (unary_expression (operator) (identifier)))
      (call_expression (identifier) (unary_expression (identifier)))
      (call_expression (identifier) (unary_expression (operator) (identifier)))
      (number))))

==================
local lambda parameters are not callees
==================

main = ->
    increment = value -> value + 1
    increment 2

---

(program
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (assignment
        (assignment_target (identifier))
        (lambda_expression
          (parameter_list (identifier_pattern (identifier)))
          (function_arrow)
          (block (binary_expression (identifier) (operator) (number)))))
      (call_expression (identifier) (number)))))

==================
pointer assignment is not a call with an equals operator
==================

store = ptr, value ->
    unsafe *ptr = value
    unsafe *(ptr) = value
    value.println!

---

(program
  (function_declaration
    (identifier)
    (parameter_list (identifier_pattern (identifier)) (identifier_pattern (identifier)))
    (function_arrow)
    (block
      (unsafe_expression
        (block
          (assignment
            (assignment_target (unary_assignment_target (operator) (identifier)))
            (identifier))))
      (unsafe_expression
        (block
          (assignment
            (assignment_target (unary_assignment_target (operator) (parenthesized_expression (identifier))))
            (identifier))))
      (postfix_expression (identifier) (field_suffix (identifier)) (bang_call_suffix)))))
