tree-sitter-rock/test/corpus/ranges.txt
==================
native range expressions
==================

bounded = -> 1..4
inclusive = -> 1..=4
to = -> ..4
to_inclusive = -> ..=4
from = -> 1..
full = -> ..

---

(program
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression
        (number)
        (number))))
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression
        (number)
        (number))))
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression
        (number))))
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression
        (number))))
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression
        (number))))
  (function_declaration
    (identifier)
    (function_arrow)
    (block
      (range_expression))))
